Retarget compatibility